--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.0",
     "firebase": "^7.14.4",
     "graphql": "^15.0.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-bootstrap": "^2.0.0-beta.6",
