--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^7.14.4",
     "graphql": "^15.0.0",
     "node-sass": "^4.14.1",
+    "aos": "^2.3.4",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-bootstrap": "^2.0.0-beta.6",
