--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "@testing-library/user-event": "^12.8.3",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.1",
-    "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.45.2",
+    "sass-loader": "^12.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
